# ApkInfoQuick

./: .gitignore  AI_PROJECT_CONTEXT.md  README.md
backend/: Cargo.toml  README.md
backend/src/: cli.rs  error.rs  lib.rs  main.rs  model.rs  parser.rs
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/scripts/: doctor.ps1
frontend/src/: App.tsx  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
frontend/src/constants/: warnings.test.ts  warnings.ts
frontend/src/rules/: no-native-dialog.test.ts
frontend/src/services/: tauri.test.ts  tauri.ts
frontend/src/types/: apk.test.ts  apk.ts  tab.ts
frontend/src/utils/: copy.test.ts  copy.ts  workspace.test.ts  workspace.ts
frontend/templates/: copy-text.template.txt
tools/android/: README.md
测试/: 测试方案.md  测试清单.md
需求/: 初步方案.md  多文件标签与复制设计方案.md
